# pbbam

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt
cmake/: PbbamTool.cmake
docs/source/: commandline_utilities.rst  conf.py
include/pbbam/: BamRecord.h
src/: BamRecord.cpp  ReadGroupInfo.cpp
tests/src/: test_DataSetIO.cpp
tests/src/cram/: pbmerge_aligned_ordering.t  pbmerge_pacbio_ordering.t
tests/src/tools/bam2sam/: bam2sam.t
tests/src/tools/pbindexdump/: cpp.t  json.t
tests/src/tools/pbmerge/: aligned_ordering.t  mixed_ordering.t  pacbio_ordering.t
tools/: CMakeLists.txt
tools/bam2sam/: CMakeLists.txt
tools/pbindex/: CMakeLists.txt
tools/pbindexdump/: CMakeLists.txt
tools/pbindexdump/src/: PbIndexDump.h  main.cpp
tools/pbmerge/: CMakeLists.txt
